[development] Auto commit on 2025-12-10 15:19:12 | Files: src/main/java/com/emenu/features/product/controller/ProductController.java src/main/java/com/emenu/features/product/controller/ProductPromotionController.java src/main/java/com/emenu/features/product/mapper/ProductMapper.java src/main/java/com/emenu/features/product/mapper/ProductPromotionMapper.java src/main/java/com/emenu/features/product/service/ProductPromotionService.java src/main/java/com/emenu/features/product/service/ProductService.java src/main/java/com/emenu/features/product/service/impl/ProductPromotionServiceImpl.java src/main/java/com/emenu/features/product/service/impl/ProductServiceImpl.java src/main/java/com/emenu/features/product/dto/request/AllProductPromotionRequest.java src/main/java/com/emenu/features/product/dto/request/AllProductRequest.java src/main/java/com/emenu/features/product/dto/request/CreateProductPromotionRequest.java src/main/java/com/emenu/features/product/dto/request/UpdateProductPromotionRequest.java src/main/java/com/emenu/features/product/dto/response/AllProductPromotionResponseDto.java src/main/java/com/emenu/features/product/dto/response/ProductPromotionDto.java